tests/negative/265/M.juvix
module M;

inductive Bool {
  false : Bool;
  true : Bool;
};

inductive Pair (A : Type) (B : Type) {
  mkPair : A → B → Pair A B;
};

f : _ → _;
f (mkPair false true) ≔ true;
f true ≔ false;

end;
